Set also --enable-native-access=ALL-UNNAMED